--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,68 @@
 /* css calendar test style */
+body {
+    background-color: black;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.arrow {
+    width: 6px;
+    height: 6px;
+    overflow: hidden;
+}
+
+.arrow--position1 {
+    position: absolute;
+    top: 40%;
+    transform: rotate(-45deg);
+}
+
+.arrow--position2 {
+    position: absolute;
+    top: 20%;
+    right: 0;
+    transform: rotate(135deg);
+}
+
+.arrow > span {
+    display: block;
+    width: 18px;
+    height: 18px;
+    background-color: black;
+    transform: rotate(-45deg);
+}
+
+.calendar__wrapper {
+    width: 830px;
+    height: 95vh;
+    overflow: hidden;
+    background-color: grey;
+    position: fixed;
+    top: 5px;
+    left: 50%;
+    transform: translateX(-50%);
+    position: relative;
+}
+
+.calendar {
+    width: 800px;
+    height: 700px;
+    border: 1px solid green;
+    margin: 10px 15px;
+}
+
+.header__name {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    height: 30px;
+    align-items: flex-start;
+}
+
+.header__arrows {
+   
+}
