--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 /* css calendar test style */
+:root {
+    --white: #ffffff;
+}
 body {
     background-color: black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 * {
@@ -8,11 +12,12 @@ body {
     margin: 0;
     padding: 0;
 }
-
+/* arrows style */
 .arrow {
     width: 6px;
     height: 6px;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .arrow--position1 {
@@ -28,6 +33,21 @@ body {
     transform: rotate(135deg);
 }
 
+.header__doubleArrows {
+    position: relative;
+}
+
+.arrow--doubleArrow1 {
+    transform: rotate(90deg);
+    position: absolute;
+    top: 2px;
+    right: 2px;
+}
+
+.arrow--doubleArrow2 {
+    transform: rotate(-90deg);
+}
+
 .arrow > span {
     display: block;
     width: 18px;
@@ -36,8 +56,26 @@ body {
     transform: rotate(-45deg);
 }
 
+.header__arrowDate {
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    width: 2px;
+    height: 2px;
+    padding: 2px;
+    cursor: pointer;
+}
+
+.header__arrowDate--left {
+    transform: rotate(-45deg);
+}
+
+.header__arrowDate--right {
+    transform: rotate(-225deg);
+}
+
+/* calendar */
 .calendar__wrapper {
-    width: 830px;
+    width: 820px;
     height: 95vh;
     overflow: hidden;
     background-color: grey;
@@ -52,17 +90,45 @@ body {
     width: 800px;
     height: 700px;
     border: 1px solid green;
-    margin: 10px 15px;
+    margin: 10px auto;
+    background-color: white;
 }
 
 .header__name {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    height: 30px;
+    height: 40px;
     align-items: flex-start;
+    padding: 5px;
 }
 
-.header__arrows {
-   
+.header__nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: relative;
+    height: 40px;
+}
+
+.header__dateChange {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.header__days {
+    font-size: 18px;
+    margin: 0 5px;
+}
+
+.header__iconCalendar {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    border-radius: 4px;
+    border: thin solid grey;
 }
