--- a/css/style.css
+++ b/css/style.css
@@ -88,10 +88,11 @@ body {
 
 .calendar {
     width: 800px;
-    height: 700px;
+    height: 91vh;
     border: 1px solid green;
     margin: 10px auto;
     background-color: white;
+    overflow-y: hidden;
 }
 
 .header__name {
@@ -131,4 +132,30 @@ body {
     cursor: pointer;
     border-radius: 4px;
     border: thin solid grey;
+}
+
+/* schedule */
+.schedule {
+    overflow-x: hidden;
+}
+.schedule__content {
+    width: 100%;
+    height: 73vh;
+    background-color: aqua;
+    line-height: 5;
+    overflow-y: scroll;
+}
+
+.schedule__daysBox {
+    display: inline-flex;
+    /* flex-direction: row; */
+}
+
+.schedule__box {
+    width: 150px;
+    height: 30px;
+    line-height: 29px;
+    border: 1px solid black;
+    border-right: 0;
+    text-align: center;
 }
