add icon, style of tasks

--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,8 @@ body {
 
 /* calendar */
 .calendar__wrapper {
-    width: 920px;
-    height: 95vh;
+    width: 820px;
+    height: 98vh;
     overflow: hidden;
     background-color: grey;
     position: fixed;
@@ -113,9 +113,8 @@ body {
 }
 
 .calendar {
-    width: 900px;
-    height: 91vh;
-    border: 1px solid green;
+    width: 800px;
+    height: 95vh;
     margin: 10px auto;
     background-color: white;
     overflow-y: hidden;
@@ -172,7 +171,7 @@ body {
 
 .schedule__boxes {
     width: 100%;
-    height: 73vh;
+    height: 78vh;
     overflow-y: scroll;
     display: flex;
     flex-direction: row;
@@ -189,7 +188,7 @@ body {
 }
 
 .schedule__box {
-    width: 140px;
+    width: 110px;
     height: 30px;
     line-height: 29px;
     text-align: center;
@@ -207,7 +206,7 @@ body {
 }
 
 .schedule__box--time {
-    height: 160px;
+    height: 140px;
     border-right: 1px solid black;
     border-top: 1px solid black;
 }
@@ -232,7 +231,7 @@ body {
 /* schedule tasks*/
 .schedule__tasks {
     position: absolute;
-    width: 137px;
+    width: 107px;
     left: 1px;
     top: 0;
 }
@@ -242,13 +241,13 @@ body {
     display: flex;
     flex-direction: column;
     margin: 2px 0;
-    padding: 2px;
+    padding: 1px;
     border-radius: 4px;
 }
 
 .schedule__free {
     background-color: transparent;
-    margin: 1px 0;
+    margin: 2px 0;
 }
 
 .schedule__task--after {
@@ -260,32 +259,42 @@ body {
 }
 
 .schedule__task--15 {
-    height: 38px;
+    height: 33px;
 }
 
 .schedule__task--30 {
-    height: 78px;
+    height: 68px;
 }
 
 .schedule__task--45 {
-    height: 118px;
+    height: 103px;
 }
 
 .schedule__task--60 {
-    height: 158px;
+    height: 138px;
 }
 
 /* inside task */
 .schedule__additionalInfo {
     position: absolute;
-    right: 0;
-    bottom: 0;
+    right: 1px;
+    bottom: 1px;
 }
 
 .schedule__taskTime {
-    font-size: 13px;
+    font-size: 11px;
 }
 
 .schedule__taskText {
+    font-size: 11px;
+    width: 80%;
+}
+
+.schedule__iconSmile {
+    font-size: 11px;
+    filter: sepia(1) saturate(6) hue-rotate(98deg);
+}
+
+.schedule__mark {
     font-size: 12px;
 }
