--- a/src/css/style.css
+++ b/src/css/style.css
@@ -146,3 +146,307 @@ body {
     border-radius: 4px;
     border: thin solid grey;
 }
+
+.header__arrowDate {
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    width: 2px;
+    height: 2px;
+    padding: 2px;
+    cursor: pointer;
+}
+
+.header__arrowDate--left {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+}
+
+.header__arrowDate--right {
+    -webkit-transform: rotate(-225deg);
+            transform: rotate(-225deg);
+}
+
+/* schedule */
+.schedule {
+    overflow-x: hidden;
+    position: relative;
+}
+
+/* time bar */
+.schedule__timeBar {
+    position: absolute;
+    top: 630px;
+    width: 100%;
+    z-index: 9999;
+}
+
+.schedule__line {
+    height: 1px;
+    width: 100%;
+    background-color: #e86735;
+    position: relative;
+}
+
+.schedule__line > span {
+    background-color: #e86735;
+    position: absolute;
+    display: block;
+}
+
+.schedule__line > span:nth-child(1), .schedule__line > span:nth-child(3) {
+    top: -2px;
+    width: 5px;
+    height: 5px;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+}
+
+.schedule__line > span:nth-child(1) {
+    left: 31px;
+}
+
+.schedule__line > span:nth-child(3) {
+    left: 73px;
+}
+
+.schedule__line > span:nth-child(2) {
+    top: -9px;
+    left: 33px;
+    width: 43px;
+    height: 19px;
+    font-size: 13px;
+    text-align: center;
+    border-radius:12px;
+    color: white;
+    line-height: 19px;
+}
+
+.schedule__topInfo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+}
+
+.schedule__boxes {
+    width: 100%;
+    height: 76vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    position: relative;
+}
+
+.schedule__plan {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+
+}
+
+.schedule__daysBox {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+}
+
+.schedule__activeDay {
+    background-color: #f2f2f2 !important; 
+}
+
+.schedule__box {
+    width: 110px;
+    height: 30px;
+    line-height: 29px;
+    text-align: center;
+}
+
+.schedule__box--days {
+    height: 30px;
+    font-size: 14px;
+    border-right: 1px solid#f5f5f5;
+    border-top: 1px solid#f5f5f5;
+    border-bottom: 1px solid#f5f5f5;
+}
+
+.schedule__box--weekend {
+    color: lightgray;
+}
+
+.schedule__staticBox > .schedule__box--days {
+    border-left: 0px;
+}
+
+.schedule__box--time {
+    height: 140px;
+    border-right: 1px solid #f5f5f5;;
+    border-top: 1px solid #f5f5f5;;
+    font-size: 14px;
+}
+
+.schedule__box--time:nth-child(odd) {
+    background-color: #faf9f9;
+}
+
+.schedule__box--time:first-child {
+    border-top: 0;
+}
+
+div.schedule__box--time:nth-child(15) {
+    border-bottom: 1px solid#f5f5f5;
+}
+
+/* boxes */
+.schedule__dayColumn {
+    position: relative;
+}
+
+/* schedule tasks*/
+.schedule__tasks {
+    position: absolute;
+    width: 109px;
+    left: 0px;
+    top: 0px;
+}
+
+.schedule__task {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 1px 0 1px 0;
+    padding: 1px;
+    border: 1px solid white;
+}
+
+.schedule__free {
+    background-color: transparent;
+    margin: 1px 0 1px 0;
+}
+
+.schedule__task--after {
+    background-color: #d6ecff;
+}
+
+.schedule__task--before {
+    background-color: #93d7fb;
+}
+
+.schedule__task--now {
+    background-color: #fdd466;
+}
+
+.schedule__task--15 {
+    height: 34px;
+}
+
+.schedule__task--30 {
+    height: 69px;
+}
+
+.schedule__task--45 {
+    height: 105px;
+}
+
+.schedule__task--60 {
+    height: 139px;
+}
+
+/* inside task */
+.schedule__additionalInfo {
+    position: absolute;
+    right: 1px;
+    bottom: 1px;
+}
+
+.schedule__taskTime {
+    font-size: 11px;
+}
+
+.schedule__taskText {
+    font-size: 11px;
+    width: 80%;
+}
+
+.schedule__iconSmile {
+    font-size: 11px;
+}
+
+.iconhelp1 {
+    -webkit-filter: sepia(1) saturate(1) hue-rotate(165deg);
+            filter: sepia(1) saturate(1) hue-rotate(165deg);
+}
+
+.iconhelp2 {
+    -webkit-filter: sepia(1) saturate(2) hue-rotate(340deg);
+            filter: sepia(1) saturate(2) hue-rotate(340deg);     
+}
+
+.schedule__mark {
+    visibility: hidden;
+    font-size: 12px;
+}
+
+.schedule__task--active {
+    visibility: visible;
+}
+
+.schedule__iconClose {
+    display: block;
+    opacity: 0;
+    border: 1px solid black;
+    border-radius: 50%;
+    font-weight: bold;
+    font-size: 17px;
+    width: 14px;
+    height: 14px;
+    text-align: center;
+    line-height: 8px;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    cursor: pointer;
+    -webkit-transition: opacity 0.1s;
+    transition: opacity 0.1s;
+}
+
+.schedule__iconClose--inActive {
+    display: none;
+}
+
+.schedule__iconClose:hover {
+    opacity: 1;
+}
+
+.schedule__button {
+    background-color: #cdcdcd;
+    display: flex;
+    justify-content: center;
+    padding: 4px 0 5px 0;
+}
+
+.schedule__button > button {
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.schedule__button > button > span {
+    display: block;
+    width: 10px;
+    height: 1px;
+    background-color: white;
+    margin-top: 1px;
+}
