modyficate of project structure

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -358,7 +358,7 @@ div.schedule__box--time:nth-child(15) {
 }
 
 .schedule__free {
-    background-color: transparent;
+    background-color: antiquewhite;
     margin: 1px 0 1px 0;
 }
 
@@ -493,4 +493,26 @@ div.schedule__box--time:nth-child(15) {
     background-color: #cdcdcd !important;
     text-align: center;
     z-index: 99999;
+}
+
+.newTask {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    border-radius: 4px;
+    background-color: rgba(0,0,0,0.3);
+    z-index: 99999;
+}
+
+.newTask__add {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 300px;
+    height: 200px;
+    border-radius: 4px;
+    background-color: var(--white);
 }
