--- a/src/css/style.css
+++ b/src/css/style.css
@@ -504,7 +504,7 @@ div.schedule__box--time:nth-child(15) {
     left: 50%;
     transform: translate(-50%,-50%);
     width: 400px;
-    height: 300px;
+    height: 200px;
     border-radius: 4px;
     background-color: var(--white);
     padding: 10px;
@@ -528,6 +528,38 @@ div.schedule__box--time:nth-child(15) {
     background-color: #d6ecff;
 }
 
+.newTask label {
+    font-size: 13px;
+}
+
 .newTask__hour {
     width: 70px;
+}
+
+.newTask__date {
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+
+.addTask__buttons {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.addTask__buttons > button {
+    width: 100px;
+    height: 28px;
+    border: 0;
+    cursor: pointer;
+    color: white;
+    border-radius: 4px;
+}
+
+.addTask__buttons > button:first-child {
+    background-color: green;
+}
+
+.addTask__buttons > button:last-child {
+    background-color: rgb(230, 5, 5);
 }
