--- a/src/css/style.css
+++ b/src/css/style.css
@@ -348,6 +348,7 @@ div.schedule__box--time:nth-child(15) {
     position: absolute;
     left: 0px;
     width: 100%;
+    max-width: 109px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -358,6 +359,7 @@ div.schedule__box--time:nth-child(15) {
     margin: 1px 0 1px 0;
     padding: 1px;
     border: 1px solid white;
+    z-index: 9999;
 }
 
 /* .schedule__free {
