add new hour in moved task

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -583,3 +583,7 @@ div.schedule__box--time:nth-child(15) {
    v2.0 | 20110126
    License: none (public domain)
 */
+
+.date {
+    display: none;
+}
